--- a/src/features/booking/components/steps/Vehicle.scss
+++ b/src/features/booking/components/steps/Vehicle.scss
@@ -121,6 +121,7 @@
   .vehicle-list {
     flex: 5;
     overflow-y: scroll;
+    overflow-x: hidden;
     scrollbar-width: thin;
     scrollbar-color: #f59e0b #fff3cd;
     display: flex;
