--- a/src/index.scss
+++ b/src/index.scss
@@ -30,7 +30,6 @@ $pgreen-soft: #f0fdf4;
   margin: 0;
   padding: 0;
   text-decoration: none;
-  scroll-behavior: smooth;
   font-family: "Lato", sans-serif;
 }
 *,
@@ -42,18 +41,6 @@ html {
   box-sizing: border-box;
 }
 
-// body {
-//   background-color: #f2f2f2;
-//   overflow: auto;
-//   section {
-//     padding: 1rem;
-//     max-height: calc(100vh - 112px);
-//     .wrapper {
-//       margin: 0 auto;
-//       @include responsive-container
-//     }
-//   }
-// }
 
 .invalid {
   border: 1px solid #e11d48 !important;
